--- a/styles/style.css
+++ b/styles/style.css
@@ -30,3 +30,11 @@ body {
     left: 0;
     z-index: 2;
 }
+
+.header__title {
+    margin: 0;
+    font-size: 24px;
+    background: -webkit-linear-gradient(280deg,#ffffff, #4d4d4d);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
